@@ -1,0 +1,46 @@
+@comment $NetBSD$
+${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
+${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
+${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
+${PYSITELIB}/${EGG_INFODIR}/requires.txt
+${PYSITELIB}/${EGG_INFODIR}/top_level.txt
+${PYSITELIB}/cmsplugin_gallery/__init__.py
+${PYSITELIB}/cmsplugin_gallery/__init__.pyc
+${PYSITELIB}/cmsplugin_gallery/__init__.pyo
+${PYSITELIB}/cmsplugin_gallery/admin.py
+${PYSITELIB}/cmsplugin_gallery/admin.pyc
+${PYSITELIB}/cmsplugin_gallery/admin.pyo
+${PYSITELIB}/cmsplugin_gallery/cms_plugins.py
+${PYSITELIB}/cmsplugin_gallery/cms_plugins.pyc
+${PYSITELIB}/cmsplugin_gallery/cms_plugins.pyo
+${PYSITELIB}/cmsplugin_gallery/forms.py
+${PYSITELIB}/cmsplugin_gallery/forms.pyc
+${PYSITELIB}/cmsplugin_gallery/forms.pyo
+${PYSITELIB}/cmsplugin_gallery/locale/en/LC_MESSAGES/django.mo
+${PYSITELIB}/cmsplugin_gallery/locale/en/LC_MESSAGES/django.po
+${PYSITELIB}/cmsplugin_gallery/locale/pl/LC_MESSAGES/django.mo
+${PYSITELIB}/cmsplugin_gallery/locale/pl/LC_MESSAGES/django.po
+${PYSITELIB}/cmsplugin_gallery/locale/ru/LC_MESSAGES/django.mo
+${PYSITELIB}/cmsplugin_gallery/locale/ru/LC_MESSAGES/django.po
+${PYSITELIB}/cmsplugin_gallery/migrations/0001_initial.py
+${PYSITELIB}/cmsplugin_gallery/migrations/0001_initial.pyc
+${PYSITELIB}/cmsplugin_gallery/migrations/0001_initial.pyo
+${PYSITELIB}/cmsplugin_gallery/migrations/0002_auto__add_field_galleryplugin_template.py
+${PYSITELIB}/cmsplugin_gallery/migrations/0002_auto__add_field_galleryplugin_template.pyc
+${PYSITELIB}/cmsplugin_gallery/migrations/0002_auto__add_field_galleryplugin_template.pyo
+${PYSITELIB}/cmsplugin_gallery/migrations/0003_move_images_to_media_path.py
+${PYSITELIB}/cmsplugin_gallery/migrations/0003_move_images_to_media_path.pyc
+${PYSITELIB}/cmsplugin_gallery/migrations/0003_move_images_to_media_path.pyo
+${PYSITELIB}/cmsplugin_gallery/migrations/__init__.py
+${PYSITELIB}/cmsplugin_gallery/migrations/__init__.pyc
+${PYSITELIB}/cmsplugin_gallery/migrations/__init__.pyo
+${PYSITELIB}/cmsplugin_gallery/models.py
+${PYSITELIB}/cmsplugin_gallery/models.pyc
+${PYSITELIB}/cmsplugin_gallery/models.pyo
+${PYSITELIB}/cmsplugin_gallery/settings.py
+${PYSITELIB}/cmsplugin_gallery/settings.pyc
+${PYSITELIB}/cmsplugin_gallery/settings.pyo
+${PYSITELIB}/cmsplugin_gallery/templates/cmsplugin_gallery/gallery.html
+${PYSITELIB}/cmsplugin_gallery/utils.py
+${PYSITELIB}/cmsplugin_gallery/utils.pyc
+${PYSITELIB}/cmsplugin_gallery/utils.pyo
