@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2012/12/09 20:36:40 adam Exp $
+
+SHA1 (cmsplugin_gallery-0.5.3.tar.gz) = ad9651ac70b5c2bf4821b7a7330a3cfa086b46ae
+RMD160 (cmsplugin_gallery-0.5.3.tar.gz) = 04ac0fc3e4ff3d276702f7a17716a6db8ce342b8
+Size (cmsplugin_gallery-0.5.3.tar.gz) = 14489 bytes
