@@ -1,0 +1,142 @@
+@comment $NetBSD$
+${PYSITELIB}/easy_thumbnails/__init__.py
+${PYSITELIB}/easy_thumbnails/__init__.pyc
+${PYSITELIB}/easy_thumbnails/__init__.pyo
+${PYSITELIB}/easy_thumbnails/alias.py
+${PYSITELIB}/easy_thumbnails/alias.pyc
+${PYSITELIB}/easy_thumbnails/alias.pyo
+${PYSITELIB}/easy_thumbnails/conf.py
+${PYSITELIB}/easy_thumbnails/conf.pyc
+${PYSITELIB}/easy_thumbnails/conf.pyo
+${PYSITELIB}/easy_thumbnails/engine.py
+${PYSITELIB}/easy_thumbnails/engine.pyc
+${PYSITELIB}/easy_thumbnails/engine.pyo
+${PYSITELIB}/easy_thumbnails/exceptions.py
+${PYSITELIB}/easy_thumbnails/exceptions.pyc
+${PYSITELIB}/easy_thumbnails/exceptions.pyo
+${PYSITELIB}/easy_thumbnails/fields.py
+${PYSITELIB}/easy_thumbnails/fields.pyc
+${PYSITELIB}/easy_thumbnails/fields.pyo
+${PYSITELIB}/easy_thumbnails/files.py
+${PYSITELIB}/easy_thumbnails/files.pyc
+${PYSITELIB}/easy_thumbnails/files.pyo
+${PYSITELIB}/easy_thumbnails/management/__init__.py
+${PYSITELIB}/easy_thumbnails/management/__init__.pyc
+${PYSITELIB}/easy_thumbnails/management/__init__.pyo
+${PYSITELIB}/easy_thumbnails/management/commands/__init__.py
+${PYSITELIB}/easy_thumbnails/management/commands/__init__.pyc
+${PYSITELIB}/easy_thumbnails/management/commands/__init__.pyo
+${PYSITELIB}/easy_thumbnails/management/commands/thumbnail_cleanup.py
+${PYSITELIB}/easy_thumbnails/management/commands/thumbnail_cleanup.pyc
+${PYSITELIB}/easy_thumbnails/management/commands/thumbnail_cleanup.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0001_initial.py
+${PYSITELIB}/easy_thumbnails/migrations/0001_initial.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0001_initial.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0002_filename_indexes.py
+${PYSITELIB}/easy_thumbnails/migrations/0002_filename_indexes.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0002_filename_indexes.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0003_auto__add_storagenew.py
+${PYSITELIB}/easy_thumbnails/migrations/0003_auto__add_storagenew.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0003_auto__add_storagenew.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0004_auto__add_field_source_storage_new__add_field_thumbnail_storage_new.py
+${PYSITELIB}/easy_thumbnails/migrations/0004_auto__add_field_source_storage_new__add_field_thumbnail_storage_new.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0004_auto__add_field_source_storage_new__add_field_thumbnail_storage_new.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0005_storage_fks_null.py
+${PYSITELIB}/easy_thumbnails/migrations/0005_storage_fks_null.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0005_storage_fks_null.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0006_copy_storage.py
+${PYSITELIB}/easy_thumbnails/migrations/0006_copy_storage.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0006_copy_storage.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0007_storagenew_fks_not_null.py
+${PYSITELIB}/easy_thumbnails/migrations/0007_storagenew_fks_not_null.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0007_storagenew_fks_not_null.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0008_auto__del_field_source_storage__del_field_thumbnail_storage.py
+${PYSITELIB}/easy_thumbnails/migrations/0008_auto__del_field_source_storage__del_field_thumbnail_storage.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0008_auto__del_field_source_storage__del_field_thumbnail_storage.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0009_auto__del_storage.py
+${PYSITELIB}/easy_thumbnails/migrations/0009_auto__del_storage.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0009_auto__del_storage.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0010_rename_storage.py
+${PYSITELIB}/easy_thumbnails/migrations/0010_rename_storage.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0010_rename_storage.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0011_auto__add_field_source_storage_hash__add_field_thumbnail_storage_hash.py
+${PYSITELIB}/easy_thumbnails/migrations/0011_auto__add_field_source_storage_hash__add_field_thumbnail_storage_hash.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0011_auto__add_field_source_storage_hash__add_field_thumbnail_storage_hash.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0012_build_storage_hashes.py
+${PYSITELIB}/easy_thumbnails/migrations/0012_build_storage_hashes.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0012_build_storage_hashes.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0013_auto__del_storage__del_field_source_storage__del_field_thumbnail_stora.py
+${PYSITELIB}/easy_thumbnails/migrations/0013_auto__del_storage__del_field_source_storage__del_field_thumbnail_stora.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0013_auto__del_storage__del_field_source_storage__del_field_thumbnail_stora.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0014_auto__add_unique_source_name_storage_hash__add_unique_thumbnail_name_s.py
+${PYSITELIB}/easy_thumbnails/migrations/0014_auto__add_unique_source_name_storage_hash__add_unique_thumbnail_name_s.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0014_auto__add_unique_source_name_storage_hash__add_unique_thumbnail_name_s.pyo
+${PYSITELIB}/easy_thumbnails/migrations/0015_auto__del_unique_thumbnail_name_storage_hash__add_unique_thumbnail_sou.py
+${PYSITELIB}/easy_thumbnails/migrations/0015_auto__del_unique_thumbnail_name_storage_hash__add_unique_thumbnail_sou.pyc
+${PYSITELIB}/easy_thumbnails/migrations/0015_auto__del_unique_thumbnail_name_storage_hash__add_unique_thumbnail_sou.pyo
+${PYSITELIB}/easy_thumbnails/migrations/__init__.py
+${PYSITELIB}/easy_thumbnails/migrations/__init__.pyc
+${PYSITELIB}/easy_thumbnails/migrations/__init__.pyo
+${PYSITELIB}/easy_thumbnails/models.py
+${PYSITELIB}/easy_thumbnails/models.pyc
+${PYSITELIB}/easy_thumbnails/models.pyo
+${PYSITELIB}/easy_thumbnails/processors.py
+${PYSITELIB}/easy_thumbnails/processors.pyc
+${PYSITELIB}/easy_thumbnails/processors.pyo
+${PYSITELIB}/easy_thumbnails/signal_handlers.py
+${PYSITELIB}/easy_thumbnails/signal_handlers.pyc
+${PYSITELIB}/easy_thumbnails/signal_handlers.pyo
+${PYSITELIB}/easy_thumbnails/signals.py
+${PYSITELIB}/easy_thumbnails/signals.pyc
+${PYSITELIB}/easy_thumbnails/signals.pyo
+${PYSITELIB}/easy_thumbnails/source_generators.py
+${PYSITELIB}/easy_thumbnails/source_generators.pyc
+${PYSITELIB}/easy_thumbnails/source_generators.pyo
+${PYSITELIB}/easy_thumbnails/storage.py
+${PYSITELIB}/easy_thumbnails/storage.pyc
+${PYSITELIB}/easy_thumbnails/storage.pyo
+${PYSITELIB}/easy_thumbnails/templatetags/__init__.py
+${PYSITELIB}/easy_thumbnails/templatetags/__init__.pyc
+${PYSITELIB}/easy_thumbnails/templatetags/__init__.pyo
+${PYSITELIB}/easy_thumbnails/templatetags/thumbnail.py
+${PYSITELIB}/easy_thumbnails/templatetags/thumbnail.pyc
+${PYSITELIB}/easy_thumbnails/templatetags/thumbnail.pyo
+${PYSITELIB}/easy_thumbnails/test.py
+${PYSITELIB}/easy_thumbnails/test.pyc
+${PYSITELIB}/easy_thumbnails/test.pyo
+${PYSITELIB}/easy_thumbnails/test_settings.py
+${PYSITELIB}/easy_thumbnails/test_settings.pyc
+${PYSITELIB}/easy_thumbnails/test_settings.pyo
+${PYSITELIB}/easy_thumbnails/tests/__init__.py
+${PYSITELIB}/easy_thumbnails/tests/__init__.pyc
+${PYSITELIB}/easy_thumbnails/tests/__init__.pyo
+${PYSITELIB}/easy_thumbnails/tests/aliases.py
+${PYSITELIB}/easy_thumbnails/tests/aliases.pyc
+${PYSITELIB}/easy_thumbnails/tests/aliases.pyo
+${PYSITELIB}/easy_thumbnails/tests/fields.py
+${PYSITELIB}/easy_thumbnails/tests/fields.pyc
+${PYSITELIB}/easy_thumbnails/tests/fields.pyo
+${PYSITELIB}/easy_thumbnails/tests/files.py
+${PYSITELIB}/easy_thumbnails/tests/files.pyc
+${PYSITELIB}/easy_thumbnails/tests/files.pyo
+${PYSITELIB}/easy_thumbnails/tests/models.py
+${PYSITELIB}/easy_thumbnails/tests/models.pyc
+${PYSITELIB}/easy_thumbnails/tests/models.pyo
+${PYSITELIB}/easy_thumbnails/tests/processors.py
+${PYSITELIB}/easy_thumbnails/tests/processors.pyc
+${PYSITELIB}/easy_thumbnails/tests/processors.pyo
+${PYSITELIB}/easy_thumbnails/tests/source_generators.py
+${PYSITELIB}/easy_thumbnails/tests/source_generators.pyc
+${PYSITELIB}/easy_thumbnails/tests/source_generators.pyo
+${PYSITELIB}/easy_thumbnails/tests/templatetags.py
+${PYSITELIB}/easy_thumbnails/tests/templatetags.pyc
+${PYSITELIB}/easy_thumbnails/tests/templatetags.pyo
+${PYSITELIB}/easy_thumbnails/tests/widgets.py
+${PYSITELIB}/easy_thumbnails/tests/widgets.pyc
+${PYSITELIB}/easy_thumbnails/tests/widgets.pyo
+${PYSITELIB}/easy_thumbnails/utils.py
+${PYSITELIB}/easy_thumbnails/utils.pyc
+${PYSITELIB}/easy_thumbnails/utils.pyo
+${PYSITELIB}/easy_thumbnails/widgets.py
+${PYSITELIB}/easy_thumbnails/widgets.pyc
+${PYSITELIB}/easy_thumbnails/widgets.pyo
