@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.3 2012/01/08 07:54:09 adam Exp $
+
+SHA1 (easy-thumbnails-1.2.tar.gz) = 3623dfb0e79b447c0705fc24058546db8ca60a05
+RMD160 (easy-thumbnails-1.2.tar.gz) = 35913df4a7feef8908783a1a12277256d7adcf0a
+Size (easy-thumbnails-1.2.tar.gz) = 53124 bytes
