@@ -1,0 +1,2 @@
+This app aims at easing implementing drag & drop reordering of inline data in
+Django Admin.
