@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2012/01/27 06:57:26 obache Exp $
+# $NetBSD: Makefile,v 1.9 2012/10/28 06:31:01 asau Exp $
 
-DISTNAME=	Paste-1.7.4
+DISTNAME=	Paste-1.7.5.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www
 MASTER_SITES=	http://pypi.python.org/packages/source/P/Paste/
@@ -10,7 +10,7 @@ HOMEPAGE=	http://pythonpaste.org/
 COMMENT=	Middleware for Python WSGI applications
 LICENSE=	mit
 
-USE_LANGUAGES=	#none
+USE_LANGUAGES=	# none
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
