@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2009/11/10 17:08:24 epg Exp $
+$NetBSD: distinfo,v 1.3 2010/07/26 12:38:42 obache Exp $
 
-SHA1 (Paste-1.7.4.tar.gz) = df6114f419ce5b162a6e6e29d5a824d699448346
-RMD160 (Paste-1.7.4.tar.gz) = 35bf95f00a687f619717a2ba571dbc5aae137429
-Size (Paste-1.7.4.tar.gz) = 517556 bytes
+SHA1 (Paste-1.7.5.1.tar.gz) = 11d3c5a2dc52c5e725139a9334574291a0f9d04f
+RMD160 (Paste-1.7.5.1.tar.gz) = 554304c4a45b208a77281dff3705cee5f9d6b2be
+Size (Paste-1.7.5.1.tar.gz) = 523304 bytes
